--- a/src/email-templates/forgot-password.ejs
+++ b/src/email-templates/forgot-password.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Keyfi Website Forgot Password Email</title>
+    <title>Task Website Forgot Password Email</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style type="text/css">
@@ -87,7 +87,7 @@
       <div class="email-footer">
         <p>
           If you have any questions, please don't hesitate to contact us at
-          <a href="mailto:support@keyfi.com">support@keyfi.com</a>
+          <a href="mailto:support@Task.com">support@Task.com</a>
         </p>
       </div>
     </div>
